owncloud/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: owncloud-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: owncloud-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: owncloud-server
    spec:
      volumes:
      - name: owncloud-server
        hostPath:
          path: /geminos/kubernetes/owncloud/server
      containers:
      - name: owncloud-server
        image: owncloud/server:10.5.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: owncloud-server
          mountPath: /mnt/data
        livenessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 30

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app.kubernetes.io/component: db
    app.kubernetes.io/name: owncloud-db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: owncloud-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: owncloud-db
    spec:
      volumes:
      - name: owncloud-db
        hostPath:
          path: /geminos/kubernetes/owncloud/db
      - name: owncloud-db-backup
        hostPath:
          path: /geminos/kubernetes/owncloud/db-backup
      containers:
      - name: owncloud-db
        image: mysql:8
        args:
        - '--default-authentication-plugin=mysql_native_password'
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: owncloud-db
          mountPath: /var/lib/mysql
        - name: owncloud-db-backup
          mountPath: /var/lib/backup
        livenessProbe:
          exec:
            command:
            - /usr/bin/mysqladmin
            - -u root
            - --password="${MYSQL_ROOT_PASSWORD}"
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - /usr/bin/mysqladmin
            - -u root
            - --password="${MYSQL_ROOT_PASSWORD}"
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 30
