owncloud/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: owncloud-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: owncloud-server
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-db
  labels:
    app.kubernetes.io/component: db
    app.kubernetes.io/name: owncloud-db
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: owncloud-db
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
