owncloud/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-server
  labels:
    app.kubernetes.io/component: owncloud-server
    app.kubernetes.io/name: owncloud-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "20G"
spec:
  rules:
    - host: owncloud.ira.zuki.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud-server
                port:
                  name: http
